name:                day10
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ilya-bobyr/advent-of-code-2018/day10#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Bobyr
maintainer:          ilya.bobyr@gmail.com
copyright:           (c) 2018 Ilya Bobyr
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day10
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -fdiagnostics-color=always
  build-depends:       base >= 4.7 && < 5
                     , extra
                     , parsec
                     , split
