name:                day23
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ilya-bobyr/advent-of-code-2018/day23#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Bobyr
maintainer:          ilya.bobyr@gmail.com
copyright:           (c) 2018 Ilya Bobyr
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day23
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -fdiagnostics-color=always  -fexcess-precision -optc-O3 -optc-ffast-math -fforce-recomp
  build-depends:       base >= 4.7 && < 5
                     , array
                     , binary-search
                     , extra
                     , parsec
