name:                day25
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ilya-bobyr/advent-of-code-2018/day25#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Bobyr
maintainer:          ilya.bobyr@gmail.com
copyright:           (c) 2018 Ilya Bobyr
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day25
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -fdiagnostics-color=always
  build-depends:       base >= 4.7 && < 5
                     , split
                     , containers
                     , vector
